--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/1P_sRUdygMWAnZyuACeWsfQbDgbKW6jix/view?usp=sharing">
+    <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/14pcCAkUp-B-3lF4V77fPnCMSt3eiIOaw/view?usp=drive_link">
     <title>Redirecionando...</title>
   </head>
   <body>
-    <p>Redirecionando... Se não funcionar, <a href="https://drive.google.com/file/d/1P_sRUdygMWAnZyuACeWsfQbDgbKW6jix/view?usp=sharing">clique aqui</a>.</p>
+    <p>Redirecionando... Se não funcionar, <a href="https://drive.google.com/file/d/14pcCAkUp-B-3lF4V77fPnCMSt3eiIOaw/view?usp=drive_link">clique aqui</a>.</p>
   </body>
 </html>
