--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url="https://drive.google.com/file/d/14pcCAkUp-B-3lF4V77fPnCMSt3eiIOaw/view">
+    <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/14pcCAkUp-B-3lF4V77fPnCMSt3eiIOaw/view">
     <title>Redirecionando...</title>
   </head>
   <body>
